manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: otterize-tutorial-mapper
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alpine/curl
          command: ["/bin/sh", "-c", "--"]
          args:
            [
              "while true; do curl -s server; sleep 1; echo 'Client - The time is:'; curl -v --silent google.com 2>&1 | grep 'Date:'; sleep 2; done",
            ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: otterize-tutorial-mapper
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: node:19
          command: ["/bin/sh", "-c"]
          args:
            [
              "echo \"\n\nHi, I am the server, do you have the time or know anything funny?\n \" > index.html; npx --yes http-server -p 80 ",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: otterize-tutorial-mapper
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2
  namespace: otterize-tutorial-mapper
spec:
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
    spec:
      containers:
        - name: client2
          image: alpine/curl
          command: ["/bin/sh", "-c", "--"]
          args:
            [
              "while true; do curl -s server; sleep 1; echo 'Client2 - These are usually funny:'; curl -s https://xkcd.com/info.0.json; sleep 2; done",
            ]
