manifest/svc-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: otterize-tutorial-mapper
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
