manifest/default-deny-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: otterize-tutorial-mapper
spec:
  podSelector: {}
  policyTypes:
    - Ingress
